# sshman

./: .coverage  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: USER_GUIDE.md
docs/superpowers/plans/: 2026-06-12-sshman-phase1-mvp.md
docs/superpowers/specs/: 2026-06-12-sshman-design.md
scripts/: install.sh
sshman/: cli.py
sshman/commands/: _helpers.py  add_cmd.py  batch_cmd.py  check_cmd.py  clone_cmd.py  connect_cmd.py  crypto_cmd.py  edit_cmd.py  exec_cmd.py  import_cmd.py  init_cmd.py  keyring_cmd.py  list_cmd.py  log_cmd.py  remove_cmd.py  rename_cmd.py  sftp_cmd.py  tunnel_cmd.py
sshman/core/: config.py  connector.py  crypto.py  keyring.py  session.py
sshman/utils/: importers.py
tests/: conftest.py  test_cli.py  test_config.py  test_connector.py  test_crypto.py  test_keyring.py  test_session.py  test_sftp.py
