[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sshman"
version = "0.1.0"
description = "SSH session management CLI tool"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "pexpect>=4.8",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
sshman = "sshman.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sshman*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-dir]
sshman = "sshman"

[tool.pytest.ini_options]
testpaths = ["tests"]
